// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobsDB Error Page should render correctly 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      aria-pressed={false}
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with button props onClick 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      aria-pressed={false}
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with button props onClick and text 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      aria-pressed={false}
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Search Again
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with button props text 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      aria-pressed={false}
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Search Again
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with texts props headline 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      keep calm
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      aria-pressed={false}
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with texts props headline and subline 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    >
      keep calm
    </Text>
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      try again
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      aria-pressed={false}
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Retry
    </Button>
  </Section>
</Card>
`;

exports[`JobsDB Error Page should render correctly, with texts props subline 1`] = `
<Card
  transparent={true}
>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <ErrorSVG />
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      yelling={true}
    />
    <Text
      baseline={true}
      className="subTitle"
      loud={true}
      secondary={true}
    >
      keep calm
    </Text>
  </Section>
  <Section
    className="section"
    header={false}
    pullout={false}
    slim={false}
  >
    <Button
      aria-pressed={false}
      className="retryButton"
      color="callToAction"
      component="button"
      isJobsDB={true}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Retry
    </Button>
  </Section>
</Card>
`;
